--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,18 @@ project(PCI_Scanner VERSION 1.16.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+option(ENABLE_RT "Enable Real Time." OFF)
+
 include_directories(include)
 
 add_library(ECNic STATIC src/ecnic.cpp)
-add_library(ECM STATIC src/ecm.cpp)
+
+if(ENABLE_RT)
+    add_library(ECM STATIC src/ecm_rt.cpp)
+else()
+    add_library(ECM STATIC src/ecm.cpp)
+endif()
+
 add_executable(User src/user.cpp)
 
 target_link_libraries(ECM ECNic pthread)
